--- a/css/blocks/header.css
+++ b/css/blocks/header.css
@@ -1,9 +1,17 @@
+.header {
+    padding-top: 10px;
+}
+
 .header__logo {
     float: left;
+    width: 31%;
+    margin-right: 6px;
 }
 
 .header__navigation {
     float: left;
+    padding-top: 25px;
+    margin-right: 3px;
 }
 
 .nav__item {
@@ -22,12 +30,19 @@
     border-radius: 50%;
     width: 4px;
     height: 4px;
+    margin-right: 15px;
+    margin-left: 15px;
     background-color: #ffffff;
     vertical-align: middle;
 }
 
 .nav__item:last-child:after {
     display: none;
+}
+
+
+.header__order {
+    padding-top: 16px;
 }
 
 .order__btn {
