--- a/css/blocks/hello-block.css
+++ b/css/blocks/hello-block.css
@@ -26,7 +26,7 @@
 
 .slogan__text1 {
     font-size: 72px;
-    font-family: 'gagalin';
+    font-family: "gagalin";
     color: #f9b43b;
     text-transform: uppercase;
     font-weight: 700;
@@ -34,7 +34,7 @@
 
 .slogan__text2 {
     font-size: 65px;
-    font-family: 'lifehack';
+    font-family: "lifehack";
     color: #fff;
     font-style: italic;
 
