--- a/css/blocks/header.css
+++ b/css/blocks/header.css
@@ -10,17 +10,26 @@
 
 .header__navigation {
     float: left;
-    padding-top: 25px;
+    padding-top: 30px;
     margin-right: 3px;
+}
+
+.nav__list {
+    font-size: 0;
+    margin-right: 13px;
 }
 
 .nav__item {
     display: inline-block;
 }
 
+
 .nav__link {
+    font-family: 'ubuntu';
+    font-weight: 500;
     font-size: 13px;
     color: #ffffff;
+    letter-spacing: 0.06px;
     text-transform: uppercase;
 }
 
@@ -33,7 +42,6 @@
     margin-right: 15px;
     margin-left: 15px;
     background-color: #ffffff;
-    vertical-align: middle;
 }
 
 .nav__item:last-child:after {
