--- a/css/blocks/hello-block.css
+++ b/css/blocks/hello-block.css
@@ -6,22 +6,33 @@
     min-height: 650px;
 }
 
+.hello-block__content {
+    margin: 0 auto;
+
+}
+
 .hello-block__pic-wrap {
     float: left;
     position: relative;
+    width: 47%;
+    padding-left: 49px;
+}
+
+.hello-block__picture {
+    width: 417px;
+    height: 424px;
 }
 
 .hello-block__drops {
     position: absolute;
     top: 12%;
-    left: -7%;
+    left: 5%;
 }
-
-
 
 .hello-block__slogan {
     float: left;
-    width: 40%;
+    width: 38%;
+    padding-top: 127px;
 }
 
 .slogan__text1 {
@@ -30,12 +41,12 @@
     color: #f9b43b;
     text-transform: uppercase;
     font-weight: 700;
+    margin-bottom: 20px;
 }
 
 .slogan__text2 {
     font-size: 65px;
     font-family: "lifehack";
     color: #fff;
-    font-style: italic;
-
+    line-height: 61px;
 }
