--- a/css/blocks/hello-block.css
+++ b/css/blocks/hello-block.css
@@ -1,9 +1,6 @@
-.hello-block {
+.section--hello-block {
     background: url(../../img/hello_section/video-bg.jpg) 0 0 no-repeat;
     background-size: cover;
-    width: 100%;
-    height: 100vh;
-    min-height: 650px;
 }
 
 .hello-block__content {
@@ -28,13 +25,15 @@
     width: 38%;
     padding-top: 127px;
 }
-
-.slogan__title {
+.title {
     font-size: 72px;
     font-family: "gagalin";
-    color: #f9b43b;
     text-transform: uppercase;
     font-weight: 700;
+}
+
+.title--slogan {
+    color: #f9b43b;
     margin-bottom: 20px;
 }
 
