--- a/css/layout/base.css
+++ b/css/layout/base.css
@@ -1,4 +1,4 @@
-* {
+*, *::after, *::before {
     box-sizing: border-box;
 }
 
@@ -17,8 +17,9 @@ a {
     text-decoration: none;
 }
 
-html, body {
-    height: 100%;
+body {
+    font-family: "ubuntu", Arial, Helvetica, sans-serif;
+    font-size: 16px;
 }
 
 .clearfix:after {
@@ -31,4 +32,10 @@ html, body {
     margin: 0 auto;
     width: 1100px;
     padding-left: 73px;
+}
+
+.section {
+    width: 100%;
+    height: 100vh;
+    min-height: 650px;
 }
