--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,321 @@
-@import url(./layout/normalize.css);
+@font-face {
+  font-family: 'lifehack';
+  src: url("../fonts/lifehack_medium-webfont.woff2") format("woff2"), url("../fonts/lifehack_medium-webfont.woff") format("woff");
+  font-weight: 500;
+  font-style: normal; }
 
-@import url(./layout/base.css);
+@font-face {
+  font-family: 'ubuntu';
+  src: url("../fonts/ubuntu-b-webfont.woff2") format("woff2"), url("../fonts/ubuntu-b-webfont.woff") format("woff");
+  font-weight: 700;
+  font-style: normal; }
 
-@import url(./layout/fonts.css);
+@font-face {
+  font-family: 'ubuntu';
+  src: url("../fonts/ubuntu-light-webfont.woff2") format("woff2"), url("../fonts/ubuntu-light-webfont.woff") format("woff");
+  font-weight: 300;
+  font-style: normal; }
 
-@import url(./blocks/header.css);
+@font-face {
+  font-family: 'ubuntu';
+  src: url("../fonts/ubuntu-medium-webfont.woff2") format("woff2"), url("../fonts/ubuntu-medium-webfont.woff") format("woff");
+  font-weight: 500;
+  font-style: normal; }
 
-@import url(./blocks/hello-block.css);
+@font-face {
+  font-family: 'ubuntu';
+  src: url("../fonts/ubuntu-regular-webfont.woff2") format("woff2"), url("../fonts/ubuntu-regular-webfont.woff") format("woff");
+  font-weight: 400;
+  font-style: normal; }
 
-@import url(./blocks/best.css);
+@font-face {
+  font-family: 'gagalin';
+  src: url("../fonts/gagalin-regular-webfont.woff2") format("woff2"), url("../fonts/gagalin-regular-webfont.woff") format("woff");
+  font-weight: 400;
+  font-style: normal; }
+
+body {
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  font-family: 'Ubuntu', Arial, Helvetica, sans-serif;
+  line-height: 1.42;
+  color: #2f3234;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  position: relative; }
+
+*, *:before, *:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
+
+body, html {
+  height: 100%; }
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: normal;
+  margin: 0; }
+
+a {
+  text-decoration: none; }
+
+.wrapper {
+  width: 100%;
+  height: 100%; }
+
+.container {
+  margin: 0 auto;
+  width: 1100px;
+  padding-left: 73px; }
+
+.section {
+  width: 100%;
+  height: 100vh;
+  min-height: 650px; }
+
+.title {
+  font-size: 72px;
+  font-family: "gagalin";
+  text-transform: uppercase;
+  font-weight: 700; }
+
+.header {
+  padding-top: 10px; }
+  .header::after {
+    content: "";
+    clear: both;
+    display: block; }
+
+.header__logo {
+  float: left;
+  width: 31%;
+  margin-right: 6px; }
+
+.header__navigation {
+  float: left;
+  padding-top: 30px;
+  margin-right: 3px; }
+
+.nav__list {
+  font-size: 0;
+  margin-right: 20px; }
+
+.nav__item {
+  display: inline-block; }
+  .nav__item:after {
+    content: '';
+    width: 4px;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #fff;
+    display: inline-block;
+    margin-left: 15px;
+    margin-right: 15px; }
+  .nav__item:last-child:after {
+    display: none; }
+
+.nav__link {
+  font-family: 'ubuntu';
+  font-weight: 500;
+  font-size: 13px;
+  color: #fff;
+  letter-spacing: 0.06px;
+  text-transform: uppercase; }
+
+.header__order {
+  padding-top: 16px; }
+
+.order__btn {
+  float: left;
+  width: 97px;
+  height: 35px;
+  border-radius: 6px;
+  font-size: 13px;
+  color: #fff;
+  text-transform: uppercase;
+  background-color: #e25028;
+  text-align: center;
+  line-height: 35px; }
+
+.section--hello-block {
+  background: url(../../img/hello_section/video-bg.jpg) 0 0 no-repeat;
+  background-size: cover; }
+
+.hello-block__content {
+  margin: 0 auto;
+  margin-bottom: 80px; }
+  .hello-block__content::after {
+    content: "";
+    clear: both;
+    display: block; }
+
+.hello-block__pic-wrap {
+  float: left;
+  position: relative;
+  width: 47%;
+  padding-left: 24px; }
+
+.hello-block__picture {
+  width: 449px;
+  height: 414px; }
+
+.hello-block__slogan {
+  float: left;
+  width: 38%;
+  padding-top: 117px; }
+
+.title--slogan {
+  color: #f8b43a;
+  margin-bottom: 10px; }
+
+.slogan__text {
+  font-size: 65px;
+  font-family: "lifehack";
+  color: #fff;
+  line-height: 61px; }
+
+.hello-block__forward {
+  text-align: center; }
+
+.section--best {
+  background: url(../img/best_section/bg.jpg) 0 0 no-repeat;
+  background-size: cover;
+  padding-top: 120px; }
+
+.title--best {
+  text-align: center;
+  margin-bottom: 27px;
+  padding-right: 72px; }
+
+.best__list {
+  text-align: center;
+  padding-right: 73px; }
+
+.best__item {
+  width: 32%;
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 10px; }
+  .best__item:last-child {
+    margin-right: 0; }
+
+.best__pic-wrap {
+  width: 100px;
+  height: 100px;
+  text-align: center;
+  margin: 0 auto;
+  margin-bottom: 11px; }
+
+.best__subtitle {
+  font-family: "lifehack";
+  font-size: 25px;
+  margin-bottom: 10px;
+  line-height: 1.27; }
+
+.best__text {
+  font-size: 14px;
+  line-height: 1.7; }
+
+.feedback__list {
+  width: 100%;
+  font-size: 0; }
+
+.feedback__item {
+  display: inline-block;
+  overflow: hidden;
+  width: 24.7vw;
+  height: 50vh;
+  position: relative; }
+  .feedback__item:after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    z-index: 9;
+    -webkit-transition: 0.3;
+    -o-transition: 0.3;
+    transition: 0.3; }
+  .feedback__item:hover .feedback__content {
+    opacity: 1; }
+  .feedback__item:hover:after {
+    opacity: 0.6; }
+
+.feedback__content {
+  position: absolute;
+  top: 14%;
+  left: 7%;
+  opacity: 0;
+  z-index: 10; }
+
+.feedback__subtitle {
+  font-size: 0.875rem;
+  font-family: "gagalin";
+  margin-bottom: 10px;
+  color: #fff; }
+
+.feedback__text {
+  font-size: 14px;
+  color: #fff; }
+
+.feedback__avatar {
+  position: relative;
+  height: 100%;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+  z-index: 1; }
+
+.feedback__avatar--long {
+  width: 100%;
+  height: initial; }
+
+.feedback__avatar--pic3 {
+  right: 25%; }
+
+.feedback__avatar--pic4 {
+  right: 25%; }
+
+.feedback__avatar--pic5 {
+  right: 25%; }
+
+.feedback__avatar--pic6 {
+  bottom: 10%; }
+
+.feedback__avatar--pic7 {
+  right: 40%; }
+
+.pagination {
+  position: fixed;
+  top: 15%;
+  right: 5%; }
+
+.pagination__item {
+  width: 0.375rem;
+  height: 0.375rem;
+  border-radius: 0.1875rem;
+  background-color: #fff;
+  position: relative;
+  margin-bottom: 0.9375rem; }
+  .pagination__item:hover:after {
+    content: '';
+    position: absolute;
+    width: 0.9375rem;
+    height: 0.9375rem;
+    border-radius: 50%;
+    border: 1px solid #fff;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    z-index: 10; }
+  .pagination__item:last-child {
+    margin-bottom: 0; }
