--- a/css/main.css
+++ b/css/main.css
@@ -128,7 +128,7 @@ a {
   text-transform: uppercase; }
 
 .header__order {
-  padding-top: 16px; }
+  padding-top: 20px; }
 
 .order__btn {
   float: left;
@@ -141,6 +141,8 @@ a {
   background-color: #e25028;
   text-align: center;
   line-height: 35px; }
+  .order__btn:hover {
+    background-color: #912e13; }
 
 .section--hello-block {
   background: url(../../img/hello_section/video-bg.jpg) 0 0 no-repeat;
@@ -259,12 +261,31 @@ a {
 .feedback__subtitle {
   font-size: 0.875rem;
   font-family: "gagalin";
-  margin-bottom: 10px;
-  color: #fff; }
+  margin-bottom: 20px;
+  color: #fff;
+  text-transform: uppercase; }
 
 .feedback__text {
   font-size: 14px;
-  color: #fff; }
+  color: #fff;
+  width: calc(210/275*100%);
+  line-height: 1.72;
+  margin-bottom: 11px; }
+
+.feedback__btn {
+  width: 110px;
+  height: 35px;
+  font-size: 13px;
+  background-color: #2f3234;
+  border-radius: 5px;
+  text-transform: uppercase;
+  text-align: center;
+  color: white;
+  font-weight: 500;
+  line-height: 35px;
+  cursor: pointer; }
+  .feedback__btn:hover {
+    background-color: black; }
 
 .feedback__avatar {
   position: relative;
@@ -299,17 +320,18 @@ a {
   z-index: 15; }
 
 .pagination__item {
-  width: 0.375rem;
-  height: 0.375rem;
-  border-radius: 0.1875rem;
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 0.25rem;
   background-color: #fff;
   position: relative;
-  margin-bottom: 0.9375rem; }
+  margin-bottom: 0.9375rem;
+  cursor: pointer; }
   .pagination__item:hover:after {
     content: '';
     position: absolute;
-    width: 0.9375rem;
-    height: 0.9375rem;
+    width: 1.25rem;
+    height: 1.25rem;
     border-radius: 50%;
     border: 1px solid #fff;
     top: 50%;
