--- a/scss/blocks/feedback.scss
+++ b/scss/blocks/feedback.scss
@@ -42,13 +42,34 @@
 .feedback__subtitle {
     font-size: rem(14px);
     font-family: "gagalin";
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     color: #fff;
+    text-transform: uppercase;
 }
 
 .feedback__text {
     font-size: 14px;
     color: #fff;
+    width: calc(210/275*100%);
+    line-height: 1.72;
+    margin-bottom: 11px;
+}
+
+.feedback__btn {
+    width: 110px;
+    height: 35px;
+    font-size: 13px;
+    background-color: $dark;
+    border-radius: 5px;
+    text-transform: uppercase;
+    text-align: center;
+    color: white;
+    font-weight: 500;
+    line-height: 35px;
+    cursor: pointer;
+    &:hover {
+        background-color: darken($dark, 20%)
+    }
 }
 
 .feedback__avatar {
