--- a/scss/blocks/header.scss
+++ b/scss/blocks/header.scss
@@ -46,7 +46,7 @@
 }
 
 .header__order {
-    padding-top: 16px;
+    padding-top: 20px;
 }
 
 .order__btn {
@@ -60,4 +60,7 @@
     background-color: $orange;
     text-align: center;
     line-height: 35px;
+    &:hover {
+        background-color: darken($color: $orange, $amount: 20%);
+    }
 }
