--- a/scss/blocks/hello.scss
+++ b/scss/blocks/hello.scss
@@ -1,5 +1,5 @@
 .section--hello-block {
-    background: url(../../img/hello_section/video-bg.jpg) 0 0 no-repeat;
+    background: url(../img/hello_section/video-bg.jpg) 0 0 no-repeat;
     background-size: cover;
 }
 
