--- a/css/main.css
+++ b/css/main.css
@@ -223,6 +223,81 @@ a {
   font-size: 14px;
   line-height: 1.7; }
 
+.section--team {
+  background: url(../img/team_section/team-bg.jpg) 0 0 no-repeat;
+  background-size: cover;
+  position: relative; }
+
+.team__right-col {
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  background-color: rgba(47, 50, 52, 0.93); }
+
+.team__content {
+  padding-top: 90px;
+  padding-left: 100px; }
+
+.title--team {
+  color: #f8b43a;
+  margin-bottom: 25px; }
+
+.v-accordeon__item {
+  width: 366px; }
+
+.v-accordeon__content {
+  padding-left: 20px; }
+
+.v-accordeon__name {
+  text-align: left;
+  font-family: 'gagalin';
+  font-size: 14px;
+  color: #fff; }
+  .v-accordeon__name:before {
+    content: '';
+    display: inline-block;
+    width: 0;
+    height: 0;
+    border: 6px solid transparent;
+    border-top-color: white;
+    border-bottom-width: 0;
+    margin-right: 5px; }
+
+.pic-wrap {
+  display: inline-block;
+  overflow: hidden;
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  background-color: #fff;
+  position: relative; }
+
+.content__img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); }
+
+.content__description {
+  display: inline-block;
+  text-align: left;
+  width: 60%;
+  vertical-align: top; }
+
+.content__title {
+  font-size: 14px;
+  font-weight: 700;
+  color: #fff; }
+
+.content__text {
+  font-size: 14px;
+  font-weight: 300;
+  color: #fff; }
+
 .feedback__list {
   width: 100%;
   font-size: 0; }
