--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,8 +21,10 @@
 
 @import "blocks/best.scss";
 
+@import "blocks/team.scss";
+
 @import "blocks/feedback.scss";
 
 @import "blocks/footer.scss";
 
-@import "blocks/aside-pagination";
+@import "blocks/aside-pagination.scss";
