--- a/css/main.css
+++ b/css/main.css
@@ -320,6 +320,84 @@ a {
   color: #fff;
   line-height: 1.6; }
 
+.section--menu {
+  background: url(../img/menu_section/menu-bg.jpg) 0 0 no-repeat;
+  background-size: cover;
+  position: relative; }
+
+.title--menu {
+  position: absolute;
+  top: 13%;
+  left: 9%;
+  color: white; }
+
+.menu__right-col {
+  position: absolute;
+  top: 0%;
+  right: 0%;
+  height: 100%;
+  background-color: rgba(47, 50, 52, 0.93); }
+
+.h-accordeon {
+  height: 100%; }
+
+.h-accordeon__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-align: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+  height: 100%; }
+
+.h-accordeon__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.h-accordeon__content {
+  width: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  -ms-flex-item-align: start;
+  align-self: flex-start;
+  padding-top: 10px; }
+
+.h-accordeon__content--active {
+  width: 540px;
+  white-space: normal; }
+
+.h-accordeon__title {
+  font-family: 'gagalin';
+  color: white;
+  -webkit-writing-mode: vertical-lr;
+  -ms-writing-mode: tb-lr;
+  writing-mode: vertical-lr;
+  -webkit-transform: rotate(-180deg);
+  -ms-transform: rotate(-180deg);
+  transform: rotate(-180deg);
+  width: 80px;
+  font-size: 40px;
+  text-align: center;
+  -ms-flex-item-align: end;
+  align-self: flex-end;
+  padding-top: 43px;
+  padding-left: 15px; }
+
 .feedback__list {
   width: 100%;
   font-size: 0; }
