--- a/scss/blocks/menu.scss
+++ b/scss/blocks/menu.scss
@@ -63,12 +63,12 @@
     align-self: flex-end;
     padding-top: 43px;
     padding-left: 15px;
-    background-size: cover;
+    background-size: auto;
 }
 
 @each $title-bg in (meat, vegetarian, diet) {
     .h-accordeon__title--#{$title-bg} {
-        background: url(../img/menu_section/accord_#{$title-bg}.jpg) center center no-repeat;
+        background: url(../img/menu_section/accord_#{$title-bg}.jpg) 0 0 no-repeat;
     }
 }
 
