--- a/scss/blocks/best.scss
+++ b/scss/blocks/best.scss
@@ -1,4 +1,4 @@
-.section--best {
+.best {
     background: url(../img/best_section/bg.jpg) 0 0 no-repeat;
     background-size: cover;
     padding-top: 120px;
