--- a/scss/blocks/feedback.scss
+++ b/scss/blocks/feedback.scss
@@ -6,7 +6,7 @@
 .feedback__item {
     display: inline-block;
     overflow: hidden;
-    width: 24.7vw;
+    width: 25%;
     height: 50vh;
     position: relative;
     &:after {
