--- a/scss/blocks/hello.scss
+++ b/scss/blocks/hello.scss
@@ -1,4 +1,4 @@
-.section--hello-block {
+.hello-block {
     background: url(../img/hello_section/video-bg.jpg) 0 0 no-repeat;
     background-size: cover;
 }
@@ -39,6 +39,6 @@
     line-height: 61px;
 }
 
-.hello-block__forward {
+.forward-arrow {
     text-align: center;
 }
