--- a/css/main.css
+++ b/css/main.css
@@ -194,32 +194,32 @@ a {
   margin-bottom: 27px;
   padding-right: 72px; }
 
-.best__list {
+.best__content ul {
   text-align: center;
   padding-right: 73px; }
 
-.best__item {
+.best__content li {
   width: 32%;
   display: inline-block;
   vertical-align: top;
   margin-right: 10px; }
-  .best__item:last-child {
+  .best__content li:last-child {
     margin-right: 0; }
 
-.best__pic-wrap {
+.best__content li > div {
   width: 100px;
   height: 100px;
   text-align: center;
   margin: 0 auto;
   margin-bottom: 11px; }
 
-.best__subtitle {
+.best__content h3 {
   font-family: "lifehack";
   font-size: 25px;
   margin-bottom: 10px;
   line-height: 1.27; }
 
-.best__text {
+.best__content p {
   font-size: 14px;
   line-height: 1.7; }
 
