--- a/css/main.css
+++ b/css/main.css
@@ -127,7 +127,7 @@ a {
   letter-spacing: 0.06px;
   text-transform: uppercase; }
 
-.header__order {
+.order {
   padding-top: 20px; }
 
 .order__btn {
