--- a/scss/blocks/best.scss
+++ b/scss/blocks/best.scss
@@ -10,12 +10,12 @@
     padding-right: 72px;
 }
 
-.best__content ul {
+.best__list {
     text-align: center;
     padding-right: 73px;
 }
 
-.best__content li {
+.best__item {
     width: 32%;
     display: inline-block;
     vertical-align: top;
@@ -25,7 +25,7 @@
     }
 }
 
-.best__content li > div {
+.best__item > div {
     width: 100px;
     height: 100px;
     text-align: center;
@@ -33,14 +33,14 @@
     margin-bottom: 11px;
 }
 
-.best__content h3 {
+.best__item h3 {
     font-family: "lifehack";
     font-size: 25px;
     margin-bottom: 10px;
     line-height: 1.27;
 }
 
-.best__content p {
+.best__item p {
     font-size: 14px;
     line-height: 1.7;
 }
