--- a/css/main.css
+++ b/css/main.css
@@ -319,8 +319,12 @@ a {
   right: 5%;
   z-index: 15; }
 
+.pagination__item {
+  margin-bottom: 0.9375rem; }
+  .pagination__item:last-child {
+    margin-bottom: 0; }
+
 .pagination__link {
-  margin-bottom: 0.9375rem;
   display: block;
   position: relative; }
   .pagination__link:before {
