--- a/scss/blocks/team.scss
+++ b/scss/blocks/team.scss
@@ -1,4 +1,4 @@
-.section--team {
+.team {
 	background: url(../img/team_section/team-bg.jpg) 0 0 no-repeat;
 	background-size: cover;
 	position: relative;
