--- a/css/main.css
+++ b/css/main.css
@@ -64,14 +64,33 @@ h1, h2, h3, h4, h5, h6 {
 a {
   text-decoration: none; }
 
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
 .wrapper {
   width: 100%;
+  min-width: 960px;
+  min-height: 100%;
+  position: relative;
   overflow: hidden; }
 
 .container {
   margin: 0 auto;
-  width: 1100px;
-  padding-left: 73px; }
+  max-width: 940px;
+  width: 95%;
+  height: 100%;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
 
 .section {
   width: 100%;
@@ -85,35 +104,48 @@ a {
   font-weight: 700; }
 
 .header {
-  padding-top: 10px; }
-  .header::after {
-    content: "";
-    clear: both;
-    display: block; }
-
-.header__logo {
-  float: left;
-  width: 31%;
-  margin-right: 6px; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding-top: 0.5625rem; }
 
 .header__navigation {
-  float: left;
-  padding-top: 30px;
-  margin-right: 3px; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
 
 .nav__list {
   font-size: 0;
-  margin-right: 20px; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-right: 0.9375rem; }
 
 .nav__item {
-  display: inline-block; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
   .nav__item:after {
     content: '';
     width: 4px;
     height: 4px;
     border-radius: 2px;
     background-color: #fff;
-    display: inline-block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     margin-left: 15px;
     margin-right: 15px; }
   .nav__item:last-child:after {
@@ -128,102 +160,131 @@ a {
   text-transform: uppercase; }
 
 .order {
-  padding-top: 20px; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
 
 .order__btn {
-  float: left;
-  width: 97px;
-  height: 35px;
-  border-radius: 6px;
-  font-size: 13px;
+  display: inline-block;
+  border-radius: 5px;
+  padding: 0.5625rem 1.0625rem;
+  font-size: 0.8125rem;
   color: #fff;
   text-transform: uppercase;
-  background-color: #e25028;
-  text-align: center;
-  line-height: 35px; }
+  background-color: #e25028; }
   .order__btn:hover {
     background-color: #912e13; }
 
 .hello-block {
   background: url(../img/hello_section/video-bg.jpg) 0 0 no-repeat;
-  background-size: cover; }
+  background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+
+.hello-block__inner-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start; }
+
+.hello-block__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 0.8;
+  -ms-flex: 0.8;
+  flex: 0.8; }
 
 .hello-block__content {
-  margin: 0 auto;
-  margin-bottom: 80px; }
-  .hello-block__content::after {
-    content: "";
-    clear: both;
-    display: block; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding-left: 3%;
+  -ms-flex-item-align: center;
+  align-self: center; }
 
 .hello-block__pic-wrap {
   float: left;
   position: relative;
-  width: 47%;
-  padding-left: 24px; }
+  width: 50%; }
 
 .hello-block__picture {
-  width: 449px;
-  height: 414px; }
+  width: 100%; }
 
 .hello-block__slogan {
-  float: left;
-  width: 38%;
-  padding-top: 117px; }
+  width: 50%;
+  padding-top: 1.875rem; }
 
 .title--slogan {
-  color: #f8b43a;
-  margin-bottom: 10px; }
+  color: #f8b43a; }
 
 .slogan__text {
-  font-size: 65px;
+  font-size: 4.0625rem;
   font-family: "lifehack";
   color: #fff;
-  line-height: 61px; }
+  line-height: 0.98; }
 
 .forward-arrow {
-  text-align: center; }
+  position: absolute;
+  bottom: 9%;
+  left: 49.5%; }
 
 .best {
   background: url(../img/best_section/bg.jpg) 0 0 no-repeat;
-  background-size: cover;
-  padding-top: 120px; }
+  background-size: cover; }
 
 .title--best {
   text-align: center;
-  margin-bottom: 27px;
-  padding-right: 72px; }
+  margin-bottom: 1.875rem; }
 
 .best__list {
-  text-align: center;
-  padding-right: 73px; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
 
 .best__item {
-  width: 32%;
-  display: inline-block;
-  vertical-align: top;
-  margin-right: 10px; }
-  .best__item:last-child {
-    margin-right: 0; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  text-align: center;
+  width: calc(100%/3); }
 
 .best__item > div {
-  width: 100px;
-  height: 100px;
   text-align: center;
-  margin: 0 auto;
-  margin-bottom: 11px; }
+  height: 7.5rem; }
 
 .best__item h3 {
   font-family: "lifehack";
-  font-size: 25px;
-  margin-bottom: 10px;
-  line-height: 1.27; }
+  font-size: 1.5625rem;
+  line-height: 1.27;
+  margin-bottom: 0.8125rem; }
 
 .best__item p {
-  font-size: 14px;
+  margin: 0;
+  font-size: 0.875rem;
+  font-weight: 300;
   line-height: 1.7; }
 
-.section--team {
+.team {
   background: url(../img/team_section/team-bg.jpg) 0 0 no-repeat;
   background-size: cover;
   position: relative; }
@@ -320,7 +381,7 @@ a {
   color: #fff;
   line-height: 1.6; }
 
-.section--menu {
+.menu {
   background: url(../img/menu_section/menu-bg.jpg) 0 0 no-repeat;
   background-size: cover;
   position: relative; }
@@ -533,3 +594,5 @@ a {
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     z-index: 10; }
+
+/*# sourceMappingURL=main.css.map */
