--- a/scss/blocks/header.scss
+++ b/scss/blocks/header.scss
@@ -1,31 +1,40 @@
 .header {
-	@include clearfix;
-	padding-top: 10px;
+	// @include clearfix;
+	// padding-top: 10px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding-top: rem(9px);
 }
 
 .header__logo {
-	float: left;
-	width: 31%;
-	margin-right: 6px;
+	// float: left;
+	// width: 31%;
+	// margin-right: 6px;
 }
 
 .header__navigation {
-	float: left;
-	padding-top: 30px;
-	margin-right: 3px;
+	// float: left;
+	// padding-top: 30px;
+	// margin-right: 3px;
+	display: flex;
 }
 
 .nav__list {
 	font-size: 0;
-	margin-right: 20px;
+	display: flex;
+	align-items: center;
+	margin-right: rem(15px);
+	// margin-right: 20px;
 }
 
 .nav__item {
-	display: inline-block;
+	display: flex;
+	align-items: center;
 	&:after {
 		content: '';
 		@include circle (4px, #fff);
-		display: inline-block;
+		display: flex;
 		margin-left: 15px;
 		margin-right: 15px;
 	}
@@ -45,26 +54,19 @@
 	text-transform: uppercase;
 }
 
-<<<<<<< HEAD
-.header__order {
-	padding-top: 20px;
-=======
 .order {
-    padding-top: 20px;
->>>>>>> fb37d2358dd1e2c6c3281c8eae95aab070f35f2c
+	// padding-top: 20px;
+	display: flex;
 }
 
 .order__btn {
-	float: left;
-	width: 97px;
-	height: 35px;
-	border-radius: 6px;
-	font-size: 13px;
+	display: inline-block;
+	border-radius: 5px;
+	padding: rem(9px) rem(17px);
+	font-size: rem(13px);
 	color: #fff;
 	text-transform: uppercase;
 	background-color: $orange;
-	text-align: center;
-	line-height: 35px;
 	&:hover {
 		background-color: darken($color: $orange, $amount: 20%);
 	}
