--- a/scss/blocks/menu.scss
+++ b/scss/blocks/menu.scss
@@ -1,4 +1,4 @@
-.section--menu {
+.menu {
     background: url(../img/menu_section/menu-bg.jpg) 0 0 no-repeat;
     background-size: cover;
     position: relative;
