--- a/css/main.css
+++ b/css/main.css
@@ -294,24 +294,55 @@ table {
   height: 100%;
   position: absolute;
   top: 0;
-  left: 50%;
-  background-color: rgba(47, 50, 52, 0.93); }
+  right: 0;
+  background-color: rgba(47, 50, 52, 0.93);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
 
 .team__content {
-  padding-top: 90px;
-  padding-left: 100px; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 70%;
+  padding-left: 0.625rem; }
 
 .title--team {
   color: #f8b43a;
-  margin-bottom: 25px; }
+  margin-bottom: 1.5625rem; }
+
+.v-accordeon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
 
 .v-accordeon__item {
-  width: 366px;
-  margin-bottom: 22px; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  margin-bottom: 1.375rem; }
 
 .v-accordeon__content {
-  padding-left: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   overflow: hidden;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
   height: 0; }
 
 .v-accordeon__item--active .v-accordeon__name {
@@ -324,36 +355,44 @@ table {
     border: 6px solid transparent;
     border-bottom-color: #f8b43a;
     border-top-width: 0;
-    margin-right: 5px; }
+    margin-right: 0.3125rem; }
 
 .v-accordeon__item--active .v-accordeon__content {
-  height: initial; }
+  min-height: 7.8125rem;
+  height: auto; }
 
 .v-accordeon__name {
-  text-align: left;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   font-family: 'gagalin';
-  font-size: 14px;
+  font-size: 0.875rem;
   color: #fff;
-  margin-bottom: 10px; }
+  margin-bottom: 0.625rem; }
   .v-accordeon__name:before {
     content: '';
-    display: inline-block;
+    display: block;
     width: 0;
     height: 0;
     border: 6px solid transparent;
     border-top-color: white;
     border-bottom-width: 0;
-    margin-right: 5px; }
+    margin-right: 0.3125rem; }
 
 .pic-wrap {
-  display: inline-block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   overflow: hidden;
   width: 100px;
   height: 100px;
   border-radius: 50px;
   background-color: #fff;
   position: relative;
-  margin-right: 11px; }
+  margin-right: 0.6875rem; }
 
 .content__img {
   position: absolute;
@@ -364,19 +403,17 @@ table {
   transform: translate(-50%, -50%); }
 
 .content__description {
-  display: inline-block;
   text-align: left;
-  width: 60%;
-  vertical-align: top; }
+  width: 60%; }
 
 .content__title {
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 700;
   color: #fff;
-  margin-bottom: 16px; }
+  margin-bottom: 1rem; }
 
 .content__text {
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 300;
   color: #fff;
   line-height: 1.6; }
