--- a/css/main.css
+++ b/css/main.css
@@ -508,11 +508,18 @@ table {
   background: url(../img/menu_section/accord_diet.jpg) 0 0 no-repeat; }
 
 .feedback__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
   width: 100%;
   font-size: 0; }
 
 .feedback__item {
-  display: inline-block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   overflow: hidden;
   width: 25%;
   height: 50vh;
@@ -572,30 +579,17 @@ table {
     background-color: black; }
 
 .feedback__avatar {
-  position: relative;
-  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: 50% 50%;
+  object-position: 50% 50%;
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
   z-index: 1; }
-
-.feedback__avatar--long {
-  width: 100%;
-  height: initial; }
-
-.feedback__avatar--pic3 {
-  right: 25%; }
-
-.feedback__avatar--pic4 {
-  right: 25%; }
-
-.feedback__avatar--pic5 {
-  right: 25%; }
-
-.feedback__avatar--pic6 {
-  bottom: 10%; }
-
-.feedback__avatar--pic7 {
-  right: 40%; }
 
 .pagination {
   position: fixed;
