--- a/scss/blocks/feedback.scss
+++ b/scss/blocks/feedback.scss
@@ -1,10 +1,12 @@
 .feedback__list {
+    display: flex;
+    flex-wrap: wrap;
     width: 100%;
     font-size: 0;
 }
 
 .feedback__item {
-    display: inline-block;
+    display: flex;
     overflow: hidden;
     width: 25%;
     height: 50vh;
@@ -73,35 +75,40 @@
 }
 
 .feedback__avatar {
-    position: relative;
-    height: 100%;
+    // position: relative;
+    // height: 100%;
+    width: 100%;
+    display: flex;
+    object-fit: cover;
+    object-position: 50% 50%;
+
     filter: grayscale(100%);
     z-index: 1;
 }
 
-.feedback__avatar--long {
-    width: 100%;
-    height: initial;
-}
+// .feedback__avatar--long {
+//     width: 100%;
+//     height: initial;
+// }
 
-.feedback__avatar--pic3 {
-    right: 25%;;
-}
+// .feedback__avatar--pic3 {
+//     right: 25%;;
+// }
 
-.feedback__avatar--pic4 {
-    right: 25%;
-}
+// .feedback__avatar--pic4 {
+//     right: 25%;
+// }
 
-.feedback__avatar--pic5 {
-    right: 25%;
-}
+// .feedback__avatar--pic5 {
+//     right: 25%;
+// }
 
-.feedback__avatar--pic6 {
-    bottom: 10%;
-}
+// .feedback__avatar--pic6 {
+//     bottom: 10%;
+// }
 
-.feedback__avatar--pic7 {
-    right: 40%;
-}
+// .feedback__avatar--pic7 {
+//     right: 40%;
+// }
 
 
