--- a/scss/blocks/header.scss
+++ b/scss/blocks/header.scss
@@ -54,12 +54,7 @@
 	text-transform: uppercase;
 }
 
-.order {
-	// padding-top: 20px;
-	display: flex;
-}
-
-.order__btn {
+.order-btn {
 	display: inline-block;
 	border-radius: 5px;
 	padding: rem(9px) rem(17px);
