--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,3 +30,7 @@
 @import "blocks/footer.scss";
 
 @import "blocks/aside-pagination.scss";
+
+@import "blocks/order.scss";
+
+@import "blocks/map.scss";
